<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMeeting">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/parent_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/room"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="20dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/a"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/b"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/c"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/d"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/e"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/f"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_g"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/g"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/h"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_i"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/i"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_button_j"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryDarker"
                        android:text="@string/j"
                        android:textColor="@color/black" />

                </RadioGroup>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/date_collapse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:onClick="showCalendar"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableEndCompat="@drawable/slide_down_arrow" />

            <DatePicker
                android:id="@+id/date_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hour_collapse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:onClick="showTimePiker"
                android:text="@string/hour"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableEndCompat="@drawable/slide_down_arrow" />

            <TimePicker
                android:id="@+id/hour_timepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/duration_add_meeting"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_meeting_duration_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hour"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/add_meeting_duration_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/minute"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/add_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/meeting_s_description"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/description_edittext"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/what_will_be_the_main_topic"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/admin_s_details"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userName_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/type_your_username"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userMail_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/type_your_mail_address"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/choose_a_meeting_color"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/add_meeting_radio_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:buttonTint="@color/blueCircle"
                        android:text="@string/blue"
                        android:textColor="@color/blueCircle" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:buttonTint="@color/redCircle"
                        android:text="@string/red"
                        android:textColor="@color/redCircle" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_purple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:buttonTint="@color/purpleCircle"
                        android:text="@string/purple"
                        android:textColor="@color/purpleCircle" />

                    <RadioButton
                        android:id="@+id/add_meeting_radio_orange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:buttonTint="@color/orangeCircle"
                        android:text="@string/orange"
                        android:textColor="@color/orangeCircle" />
                </RadioGroup>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/add_participant_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/add_participant"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/add_participant_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:onClick="onAddField"
                android:contentDescription="@string/add_participant"
                android:src="@drawable/ic_baseline_add_24" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="checkDialog"
                android:text="@string/create_meeting"
                android:textAllCaps="false">

            </Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>