<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_participant"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/mail_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_marginStart="20dp"
        android:hint="@string/write_participant_mail"
        android:inputType="textEmailAddress" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_close_24"
        android:onClick="onDelete"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"/>
</LinearLayout>

